--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "8"
+        "phpunit/phpunit": "^7.0",
+        "phpunit/dbunit": "^4.0"
     }
 }
